adjusting using rebase index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>This is another Major Test</h1>
     <p>First Paragraph</p>
     <p>This is another Paragragh</p>
+    <h1>This is a heading</h1>
+    <p>I addede something you'd like</p>
 </body>
 </body>
 </html>
