added another paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>This is another Major Test</h1>
     <p>First Paragraph</p>
+    <p>This is another Paragragh</p>
 </body>
 </body>
 </html>
