--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is a test</title>
+    <title>Page Title</title>
 </head>
 <body>
     <h1>This is another Major Test</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis vel, 
-        atque repellat vero autem officia reiciendis dignissimos consequatur ratione
-        odio voluptate dolores dolorum nulla reprehenderit necessitatibus quisquam? 
-        Doloremque, sed libero? </p>
-    <img>
+    <p>First Paragraph</p>
 </body>
 </html>
